Make code compatible with Java 8